--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "framer-motion": "^11.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0",
-    "react-scroll": "^1.9.0"
+    "react-icons": "^5.4.0",
+    "react-scroll": "^1.9.0",
+    "react-tsparticles": "^2.12.2",
+    "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
