--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.6.0",
     "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
     "tailwindcss-textshadow": "^2.1.3"
