--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^7.6.0",
     "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
+    "swiper": "^11.2.10",
     "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
